--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Shamrock Lee <ShamrockLee+GitHub@protonmail.com>"]
 [tool.poetry.dependencies]
 python = ">=3.6"
 numpy = "^1.18.1"
+uproot = "^3.11.3"
 
 [tool.poetry.dev-dependencies]
 
